syntax = "proto3";

                 package gameTele;
service GameTeleService {
 rpc createGameTele (GameTeleCreateInput) returns (GameTele) {}
rpc gameTeles (findManyParams) returns (stream GameTele) {}
rpc gameTele (GameTeleWhereUniqueInput) returns (GameTele) {}
rpc updateGameTele (GameTeleUpdateInput) returns (GameTele) {}
rpc deleteGameTele (GameTeleWhereUniqueInput) returns (GameTele) {} 
 }
message GameTeleCreateInput {
string createdAt = 1;
string id = 2;
int32 map = 3;
string name = 4;
int32 orientation = 5;
int32 positionX = 6;
int32 positionY = 7;
int32 positionZ = 8;
string updatedAt = 9;
};
message GameTele {
string createdAt = 1;
string id = 2;
int32 map = 3;
string name = 4;
int32 orientation = 5;
int32 positionX = 6;
int32 positionY = 7;
int32 positionZ = 8;
string updatedAt = 9;
};
message GameTeleWhereUniqueInput {
string createdAt = 1;
string id = 2;
int32 map = 3;
string name = 4;
int32 orientation = 5;
int32 positionX = 6;
int32 positionY = 7;
int32 positionZ = 8;
string updatedAt = 9;
};
message GameTeleUpdateInput {
string createdAt = 1;
string id = 2;
int32 map = 3;
string name = 4;
int32 orientation = 5;
int32 positionX = 6;
int32 positionY = 7;
int32 positionZ = 8;
string updatedAt = 9;
};
message findManyParams {

};